deployments/workloads/syncthing/mkdocs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkdocs-deployment
  labels:
    app: mkdocs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mkdocs
  template:
    metadata:
      labels:
        app: mkdocs
    spec:
      containers:
        - name: mkdocs
          image: syncthing/syncthing
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nfs-docs
              mountPath: /usr/share/nginx/html
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
      volumes:
        - name: nfs-docs
          nfs:
            server: truenas
            path: /mnt/bigdata/kubernetes/syncthing
            readOnly: false
