deployments/workloads/syncthing/mkdocs-cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "mkdocs"
spec:
  endpointSelector:
    matchLabels:
      app: mkdocs
  egress:
    - toPorts:
        - ports:
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
